@@ -4,13 +4,13 @@ from sqlobject.tests.dbtest import *
 class PersonWithAlbum(SQLObject):
     name = StringCol()
     # albumNone returns the album or none
-    albumNone = SingleJoin('PhotoAlbum', joinColumn='person_id')
+    albumNone = SingleJoin('PhotoAlbum', joinColumn='test_person_id')
     # albumInstance returns the album or an default album instance
-    albumInstance = SingleJoin('PhotoAlbum', makeDefault=True, joinColumn='person_id')
+    albumInstance = SingleJoin('PhotoAlbum', makeDefault=True, joinColumn='test_person_id')
 
 class PhotoAlbum(SQLObject):
     color = StringCol(default='red')
-    person = ForeignKey('PersonWithAlbum')
+    person = ForeignKey('PersonWithAlbum', dbName='test_person_id')
 
 def test_1():
     setupClass([PersonWithAlbum, PhotoAlbum])
